--- a/index.html
+++ b/index.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 <html>
+  
+  <head>
+    <title>Reddy Family</title>
+  </head>
 <body>
 
-<h1>My First Heading</h1>
+    <h1>Reddy Family</h1>
 
-<p>My first paragraph.</p>
-
+  <p>test website</p>
 </body>
+      
+      
 </html>
-
