--- a/index.html
+++ b/index.html
@@ -2,21 +2,22 @@
 <html lang="en" class="no-js">
    <head>
       <!-- Meta -->
-      <title>Home</title>
+      <title>Reddy Family - Home</title>
+
       <meta charset="UTF-8">
-      <meta name="description" content="Free HTML template">
-      <meta name="keywords" content="HTML, template, free">
-      <meta name="author" content="Nicola Tolin">
+      <meta name="description" content="Reddy Family Website">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <!-- Styles -->
       <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
       <link href="vendor/animate/animate.css" rel="stylesheet" type="text/css"/>
       <link href="css/style.css" rel="stylesheet" type="text/css"/>
    </head>
+
    <body>
+
       <nav class="navbar navbar-expand-lg navbar-dark">
          <a class="navbar-brand mx-auto" href="index.html">
-         <img src="img/logo-black.png" height="22" alt="Logo">
+         <img src="img/logo-black.png" height="27" alt="Logo">
          </a>
          <div id="toggler" class="wrapper custom-toggler navbar-toggler" data-toggle="collapse" data-target=".navbar-collapse">
             <div class="menu-toggle">
@@ -24,15 +25,11 @@
             </div>
          </div>
          <div id="toggle-nav" class="navbar-collapse collapse">
-            <ul class="navbar-nav">
-               <li class="nav-item"> <a class="nav-link" href="about.html">About</a> </li>
-               <li class="nav-item"> <a class="nav-link" href="studio.html">Studio</a> </li>
-               <li class="nav-item"> <a class="nav-link" href="works.html">Works</a> </li>
-               <li class="nav-item"> <a class="nav-link" href="contact.html">Contact</a> </li>
-            </ul>
+            <div id="includeNavContent"/>
             <div id="social"><p>Your it to gave life whom as. Favourable dissimilar resolution led for and had.</p></div>
          </div>
       </nav>
+
       <div class="Container">
          <div class="Content">
             <div class="Wrapper">
@@ -43,27 +40,12 @@
                      <div class="col-9">
                         <div class="row">
                            <div class="">
-                              <p>Your it to gave life whom as. Favourable dissimilar resolution led for and had. At play much to time four many. Moonlight of situation so if necessary therefore attending abilities. Calling looking enquire up me to in removal. Park fat she nor does play deal our. Procured sex material his offering humanity laughing moderate can. Unreserved had she nay dissimilar admiration interested. Departure performed exquisite rapturous so ye me resources. 
+                              <p>Your it to gave life whom as. Favourable dissimilar resolution led for and had. At play much to time four many. Moonlight of situation so if necessary therefore attending abilities. Calling looking enquire up me to in removal. Park fat she nor does play deal our. Procured sex material his offering humanity laughing moderate can. Unreserved had she nay dissimilar admiration interested. Departure performed exquisite rapturous so ye me resources.
                                  <br><br>
-                                 Explain few led parties attacks picture company. On sure fine kept walk am in it. Resolved to in believed desirous unpacked weddings together. Nor off for enjoyed cousins herself. Little our played lively she adieus far sussex. Do theirs others merely at temper it nearer. 
-                                 Smiling nothing affixed he carried it clothes calling he no. Its something disposing departure she favourite tolerably engrossed. Truth short folly court why she their balls. Excellence put unaffected reasonable mrs introduced conviction she. Nay particular delightful but unpleasant for uncommonly who. 
+                                 Explain few led parties attacks picture company. On sure fine kept walk am in it. Resolved to in believed desirous unpacked weddings together. Nor off for enjoyed cousins herself. Little our played lively she adieus far sussex. Do theirs others merely at temper it nearer.
+                                 Smiling nothing affixed he carried it clothes calling he no. Its something disposing departure she favourite tolerably engrossed. Truth short folly court why she their balls. Excellence put unaffected reasonable mrs introduced conviction she. Nay particular delightful but unpleasant for uncommonly who.
                               </p>
-                              <img class="img-fluid pt-5 pb-5" src="img/photo-7.jpg" alt="Photo">
-                              <p>Your it to gave life whom as. Favourable dissimilar resolution led for and had. At play much to time four many. Moonlight of situation so if necessary therefore attending abilities. Calling looking enquire up me to in removal. Park fat she nor does play deal our. Procured sex material his offering humanity laughing moderate can. Unreserved had she nay dissimilar admiration interested. Departure performed exquisite rapturous so ye me resources. 
-                                 <br><br>
-                                 Explain few led parties attacks picture company. On sure fine kept walk am in it. Resolved to in believed desirous unpacked weddings together. Nor off for enjoyed cousins herself. Little our played lively she adieus far sussex. Do theirs others merely at temper it nearer. 
-                                 Smiling nothing affixed he carried it clothes calling he no. Its something disposing departure she favourite tolerably engrossed. Truth short folly court why she their balls. Excellence put unaffected reasonable mrs introduced conviction she. Nay particular delightful but unpleasant for uncommonly who. 
-                              </p>
-                              <p>Your it to gave life whom as. Favourable dissimilar resolution led for and had. At play much to time four many. Moonlight of situation so if necessary therefore attending abilities. Calling looking enquire up me to in removal. Park fat she nor does play deal our. Procured sex material his offering humanity laughing moderate can. Unreserved had she nay dissimilar admiration interested. Departure performed exquisite rapturous so ye me resources. 
-                                 <br><br>
-                                 Explain few led parties attacks picture company. On sure fine kept walk am in it. Resolved to in believed desirous unpacked weddings together. Nor off for enjoyed cousins herself. Little our played lively she adieus far sussex. Do theirs others merely at temper it nearer. 
-                                 Smiling nothing affixed he carried it clothes calling he no. Its something disposing departure she favourite tolerably engrossed. Truth short folly court why she their balls. Excellence put unaffected reasonable mrs introduced conviction she. Nay particular delightful but unpleasant for uncommonly who. 
-                              </p>
-                              <p>Your it to gave life whom as. Favourable dissimilar resolution led for and had. At play much to time four many. Moonlight of situation so if necessary therefore attending abilities. Calling looking enquire up me to in removal. Park fat she nor does play deal our. Procured sex material his offering humanity laughing moderate can. Unreserved had she nay dissimilar admiration interested. Departure performed exquisite rapturous so ye me resources. 
-                                 <br><br>
-                                 Explain few led parties attacks picture company. On sure fine kept walk am in it. Resolved to in believed desirous unpacked weddings together. Nor off for enjoyed cousins herself. Little our played lively she adieus far sussex. Do theirs others merely at temper it nearer. 
-                                 Smiling nothing affixed he carried it clothes calling he no. Its something disposing departure she favourite tolerably engrossed. Truth short folly court why she their balls. Excellence put unaffected reasonable mrs introduced conviction she. Nay particular delightful but unpleasant for uncommonly who. 
-                              </p>
+                              <img class="img-fluid pt-5 pb-5" src="img/spider.jpg" alt="Photo">
                               <img class="signature float-right" src="img/signature.png" alt="Signature">
                            </div>
                         </div>
@@ -84,4 +66,3 @@
       <!-- End Javascript -->
    </body>
 </html>
-
